# sing-tray

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
Extension/: DottedIcon.cpp  DottedIcon.h  RouteManager.cpp  RouteManager.h
Resources/: Icon.cpp  Icon.qrc
Sys/: AutoRun.cpp  AutoRun.h  SystemCtl.cpp  SystemCtl.h
